--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -39,12 +39,12 @@
             android:name=".fragment.FragmentDriver"
             android:label="@string/title_activity_fragment_driver" />
         <activity android:name=".Activities.TripHistory" />
-
+<activity android:name=".Activities.DriverDetailActivity"/>
         <uses-library
             android:name="org.apache.http.legacy"
             android:required="false" />
 
-        <activity android:name=".Activities.Login">
+        <activity android:name=".Frags.DriverinfoFragment">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
