--- a/app/build.gradle
+++ b/app/build.gradle
@@ -91,6 +91,7 @@ dependencies {
     annotationProcessor 'com.github.bumptech.glide:compiler:4.11.0'
 
 
+    implementation 'com.android.volley:volley:1.1.1'
 
 
     testImplementation 'junit:junit:4.13.1'
