--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -24,6 +24,7 @@
         <activity android:name=".chatIntegration.Activity.MainChatActivity" />
         <activity android:name=".chatIntegration.Activity.MessageActivity" />
         <activity android:name=".Frags.DriverinfoFragment"/>
+        <activity android:name=".Frags.SendDataTospecificUsers"/>
         <!--
              The API key for Google Maps-based APIs is defined as a string resource.
              (See the file "res/values/google_maps_api.xml").
