--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -20,11 +20,11 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".Activities.Home"></activity>
+        <activity android:name=".fragment.FragmentDriver"></activity>
+        <activity android:name=".Activities.Home" />
         <activity android:name=".chatIntegration.Activity.MainChatActivity" />
         <activity android:name=".chatIntegration.Activity.MessageActivity" />
-        <activity android:name=".Frags.DriverinfoFragment"/>
-        <activity android:name=".Frags.SendDataTospecificUsers"/>
+        <activity android:name=".Frags.SendDataTospecificUsers" />
         <!--
              The API key for Google Maps-based APIs is defined as a string resource.
              (See the file "res/values/google_maps_api.xml").
@@ -38,15 +38,16 @@
             android:value="@string/google_maps_key" />
 
         <activity
-            android:name=".fragment.FragmentDriver"
+            android:name=".Frags.PromotionsAndDiscountsFragment"
             android:label="@string/title_activity_fragment_driver" />
         <activity android:name=".Activities.TripHistory" />
-<activity android:name=".Activities.DriverDetailActivity"/>
+        <activity android:name=".Activities.DriverDetailActivity" />
+
         <uses-library
             android:name="org.apache.http.legacy"
             android:required="false" />
 
-        <activity android:name=".Frags.PromotionsAndDiscountsFragment">
+        <activity android:name=".MainActivityBottomNavigation">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
