--- a/app/build.gradle
+++ b/app/build.gradle
@@ -69,8 +69,9 @@ dependencies {
     implementation 'org.greenrobot:eventbus:3.0.0'
     implementation 'com.mikhaellopez:circularprogressbar:3.0.3'
     implementation 'com.google.android.material:material:1.3.0-alpha04'
+    implementation "androidx.fragment:fragment-ktx:1.2.0-rc01"
 
-
+    implementation 'com.github.PhilJay:MPAndroidChart:v3.1.0'
     implementation 'com.google.code.gson:gson:2.8.6'
     implementation 'de.hdodenhof:circleimageview:3.1.0'
     implementation 'com.google.maps.android:android-maps-utils:2.2.0'
@@ -91,6 +92,7 @@ dependencies {
     annotationProcessor 'com.github.bumptech.glide:compiler:4.11.0'
 
 
+    implementation 'com.budiyev.android:circular-progress-bar:1.2.2'
     implementation 'com.android.volley:volley:1.1.1'
 
 
